<resources>
    <string name="app_name">Freakuency Tuner</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="content">Content</string>
    <string name="archive">Archive</string>
    <string name="recent">Recent</string>
    <string name="favorites">Favorites</string>
    <string name="bin">Bin</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="settings_fragment">Settings for user %s</string>
    <string name="content_fragment">Content Fragment</string>
    <string name="archive_fragment">Archive Fragment</string>
    <string name="recent_fragment">Recent Fragment</string>
    <string name="favorites_fragment">Favorites Fragment</string>
    <string name="bin_fragment">Bin Fragment</string>
    <string name="link_to_content_button">Link to Content Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="standard_tuner">Standard Tuner</string>
    <string name="chromatic_tuner">Chromatic Tuner</string>
    <string name="metronome">Metronome</string>
    <string name="synth">Mini Synth</string>

    <string name="tabs">Tabs</string>
    <string name="resources">Resources</string>
    <string name="shopping">Shopping</string>


    <string name="header_text">Please enter your username and password below to login:</string>
    <string name="welcome_text">Welcome to Freakuency Tuner \%s\! Take a look around.</string>
    <string name="login_form_entry_error">Please fill in both username and password fields!</string>
    <string name="register_form_entry_error">Please fill in all fields</string>
    <string name="register_form_entry_success">Registration successful</string>
    <string name="register_form_entry_error2">Passwords do not match</string>

    <string name="login_error">Either your user name or password is not recognised! Please try again.</string>
    <string name="username_label">Enter your username:</string>
    <string name="password_label">Enter your password:</string>
    <string name="submit_button_text">LOGIN</string>
    <string name="back_button_text">GO BACK</string>
    <string name="continue_button_text">Continue</string>
    <string name="constant_log_in">%s is logged in</string>

    <string name="tab1">Rocky Top</string>
    <string name="tab2">Sweet Home Alabama</string>
    <string name="tab3">Wagon Wheel</string>
    <string name="tab4">Salt Creek</string>
    <string name="unknown_tab">Unknown Tab</string>
    <string name="tabs_header">Tabs</string>
    <string name="resources_header">Resources</string>
    <string name="scales_header">Scales</string>
    <string name="menu">Menu</string>

    <string name="scales">Scales</string>
    <string name="chords">Chords</string>
    <string name="arp">Arpeggios</string>
    <string name="modes">Modes</string>

    <string name="majorScales">Major Scale</string>
    <string name="minorScales">Minor Scale</string>
    <string name="majorPentatonic">Major Pentatonic</string>
    <string name="minorPentatonic">Minor Pentatonic</string>
    <string name="unknown_resource">Unknown Resource</string>


    <string name="synth_heading">Freakuency Synth</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="app_menu">Freakuency Tuner Menu</string>
    <string name="standard_tuner_menu">Standard Tuner</string>
    <string name="chromatic_tuner_menu">Chromatic Tuner</string>
    <string name="metronome_menu">Metronome</string>
    <string name="synth_menu">Mini Synth</string>
    <string name="tabs_menu">Tabs</string>
    <string name="resources_menu">Resources</string>
    <string name="shopping_menu">Shopping</string>
    <string name="enter_bpm">Enter BPM</string>

    <string name="instructions">Press a button to play the tone</string>
</resources>