<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_menu"
    app:defaultNavHost="true">


<!--    <fragment-->
<!--        android:id="@+id/nav_home"-->
<!--        android:name="edu.msudenver.cs3013.project01.HomeFragment"-->
<!--        android:label="@string/home"-->
<!--        tools:layout="@layout/fragment_home">-->
<!--        <action-->
<!--            android:id="@+id/nav_home_to_menu"-->
<!--            app:destination="@id/nav_menu"-->
<!--            app:popUpTo="@id/nav_home" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_menu"
        android:name="edu.msudenver.cs3013.project01.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu">
        <argument
            android:name="username"
            app:argType="string"
             />
        <action
            android:id="@+id/nav_home_to_chromatic_tuner"
            app:destination="@id/nav_chromatic_tuner"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/nav_home_to_metronome"
            app:destination="@id/nav_metronome"
            app:popUpTo="@id/nav_home" />
        <action
            android:id="@+id/nav_home_to_tabs"
            app:destination="@id/nav_tabs"
            app:popUpTo="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_content"
        android:name="edu.msudenver.cs3013.project01.ContentFragment"
        android:label="@string/content"
        tools:layout="@layout/fragment_content" />

    <fragment
        android:id="@+id/nav_recent"
        android:name="edu.msudenver.cs3013.project01.RecentFragment"
        android:label="@string/recent"
        tools:layout="@layout/fragment_recent" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="edu.msudenver.cs3013.project01.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_archive"
        android:name="edu.msudenver.cs3013.project01.ArchiveFragment"
        android:label="@string/archive"
        tools:layout="@layout/fragment_archive" />

    <fragment
        android:id="@+id/nav_bin"
        android:name="edu.msudenver.cs3013.project01.BinFragment"
        android:label="@string/bin"
        tools:layout="@layout/fragment_archive" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.msudenver.cs3013.project01.SettingFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_chromatic_tuner"
        android:name="edu.msudenver.cs3013.project01.ChromaticTunerFragment"
        android:label="Chromatic Tuner"
        tools:layout="@layout/fragment_chromatic_tuner" />
    <fragment
        android:id="@+id/nav_metronome"
        android:name="edu.msudenver.cs3013.project01.MetronomeFragment"
        android:label="Metronome"
        tools:layout="@layout/fragment_metronome" />

</navigation>
