<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="80dp"
                style="@style/ScalesTextView"
                android:text="@string/scales_header" />
            <TextView
                android:id="@+id/logged_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="9dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                android:text="@string/constant_log_in"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/MajorScale"
                style="@style/TabsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"

                android:text="@string/majorScales" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/MinorScale"
                style="@style/TabsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/minorScales" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/MajorPentatonicScale"
                style="@style/TabsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/majorPentatonic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />

            <TextView
                android:id="@+id/MinorPentatonicScale"
                style="@style/TabsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/minorPentatonic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="Main Menu" />

</LinearLayout>
