<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/page"
    tools:context=".MainActivity">

    <!-- Background Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loginbackground"
        android:scaleType="centerCrop"
        android:contentDescription="Background Image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/header"
        style="@style/header"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:textSize="24sp"
    android:textColor="#FFFFFF"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:text="Please enter your username and password below to login:" />

    <EditText
        android:id="@+id/user_name"
        style="@style/edit_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_label"
        android:textColor="#000000"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/password"
        tools:text="Enter your username:" />

    <EditText
        android:id="@+id/password"
        style="@style/edit_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        tools:text="Enter your password:" />

    <Button
        android:id="@+id/submit_button"

        android:layout_width="match_parent"
    android:layout_height="140dp"
    android:text="@string/submit_button_text"
    android:textColor="#FFFFFF"
    app:layout_constraintTop_toBottomOf="@id/password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintVertical_bias="0.5"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:textSize="18sp"
        tools:text="SUBMIT" />


</androidx.constraintlayout.widget.ConstraintLayout>